# rcomm

./: Makefile.am  Makefile.in  README  config.status  configure  configure.in  rcomm.depend  rcomm.geany  rcomm.layout  rcomm.workspace
autom4te.cache/: output.1  traces.0  traces.1
rcomm/: ConfigFile.cpp  ConfigFile.h  Makefile.am  Makefile.in  rcomm.cbp  rcomm.cpp
rcomm/.deps/: rcomm.Po
rcommd/: Makefile.am  Makefile.in  rcommd.cpp
rcommd/.deps/: ConfigFile.Po  rcommd.Po
