AC_INIT(rcomm, 0.1)
# Initializes the configure script. On start it will check for the
# main source file specified here first.

AM_INIT_AUTOMAKE(rcomm, 0.1)
# Tells automake we have project named "rcomm" version 0.1

AC_PROG_CC
# Adds a check for C compiler
AC_PROG_CXX
CFLAGS="-O2 -w -s"
CXXFLAGS="-g -O2 -w -s"

AC_OUTPUT([Makefile
rcomm/Makefile
rcommd/Makefile])
# The output file is Makefile. All the build stuff will be put there
